fix: Address UI issues with multi-select and search
This commit fixes a number of UI issues on the follow-up email page:
- The dynamic search functionality is now working correctly. The issue was with a missing CSS style for the dropdown list.
- A "Show More" / "Show Less" functionality has been added to the list of selected items to prevent the list from taking up too much space.
- Spacing has been added to the "Select All" button.
- The `setChoices` call has been refactored to correctly update the choices in the dropdown.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -524,6 +524,8 @@ h1, h2, h3 {
 }
 
 .choices__list--dropdown {
+    position: absolute;
+    width: 100%;
     z-index: 10;
     background-color: #fff;
     border: 1px solid #ddd;
